tests/negative/gold/interfaceA-test.gold
tests/negative/interfaceA-test.toit:6:3: error: Interfaces can't have constructors
  constructor.named
  ^~~~~~~~~~~~~~~~~
tests/negative/interfaceA-test.toit:9:9: error: Can't instantiate interface class without factory
  a := A.named
        ^~~~~~
Compilation failed
